--- a/members.html
+++ b/members.html
@@ -212,9 +212,6 @@
             readData($("#data"));
             $('.grid-item').first().html('').css('display', 'none');
 
-            $('.categ').mouseenter(function(){
-                /*alert($(this).find('.cmCont').text());*/
-            });
         });
     </script>
     <script src="https://spreadsheets.google.com/feeds/cells/1ZzVZpDJh6x55HRXbUJpfrdHFPyQDzU05eIN1RJe43ds/1/public/values?alt=json-in-script&callback=doData"></script>
@@ -232,39 +229,6 @@
 
     <!-- I don't know why this needs a padding left -> Added bordRed, evens out the DIV -->
     <div id="data" class="centerText centerDiv" style="padding: 0 0 0 3px;"></div>
-    <!-- Active Members
-    <div>
-        <div class="inlineBlock backColWhite bordRad5 shadow" style="width: 250px;">
-            <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 28px; padding: 10px 0 10px 0;">Varun Shivakumar</div>
-            <div class="">
-                <img src="http://static5.businessinsider.com/image/52b86ce46bb3f7032e3faf9e-500-375/doge-1.jpg" height="250px" width="250px" class=""/>
-            </div>
-
-            <div class="vertAlignTop opensans" style="text-align: left; padding: 8px;">
-                <div>
-                    <span style="font-weight: bold;">Hometown:</span>
-                    <span>Plainview, NY</span>
-                </div>
-
-                <div>
-                    <span style="font-weight: bold;">Pledge Class: </span>
-                    <span>Fall 2015</span>
-                </div>
-
-                <div>
-                    <span style="font-weight: bold;">Major and Year:  </span>
-                    <span>Computer Science, 2017</span>
-                </div>
-
-                <div>
-                    <span style="font-weight: bold;">Description  </span>
-                    <span>Hello, World</span>
-                </div>
-            </div>
-        </div>
-    </div>-->
-
-
 
 
 </div>
@@ -285,13 +249,19 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
     $(document).ready(function(){
         $('#header').load("header.html");
         $('#footer').load("footer.html");
+
+
     });
+
+
 </script>
 
 <script>
     $(document).on('page:load', function() {
         $('#header').load("header.html");
         $('#footer').load("footer.html");
+
+
     });
 </script>
 
@@ -304,5 +274,24 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
 
         });
     });
+</script>
+
+<script>
+    /*
+    $(window).bind("load", function() {
+        $('.categ').mouseenter(function(){
+            /*alert($(this).find('.cmCont').text());
+            var val = $(this).find('.cmCont').text();
+            var elements = document.getElementsByClassName('.cmCont');
+            alert(elements.length);
+            for(var i=0;i<elements.length;i++){
+                if(elements[i].text() != val){
+                    alert('heel');
+                    elements[i].parent('.grid-item').css('display','none');
+                }
+            }
+        });
+    });
+    */
 </script>
 
