--- a/index.html
+++ b/index.html
@@ -29,44 +29,43 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 453px;">
-    <div style="position: absolute; height: 440px; width: 590px; border: 10px solid #363636;z-index: 10; left: 630px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 25px;"></div>
+<div class="posRel" style="width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 453px;">
+    <div style="position: absolute; height: 440px; width: 590px; border: 10px solid #363636;z-index: 10; left: 170px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 25px;"></div>
 
-    <div class=" posRel" style="width: 4000px; text-align: left; left: -1485px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    <div class=" posRel" style="width: 4000px; text-align: left; left: -1940px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);height: 398px;margin: 90px auto 50px;">
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
-            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="">
-            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
         </div>
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow2" class="slideshow inlineBlock vertAlignTop" style="">
-
-            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
             <!-- Welcome Letter-->
             <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs" style="left: 540px; font-size: 20px; height: 400px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
@@ -80,26 +79,25 @@
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow3" class="slideshow inlineBlock vertAlignTop" style="height: 450px;width: 530px;bottom: 25px;">
             <div style="position: absolute; height: 50px; top: -25px; width: 530px;background-color: #E3E3E3;z-index:10;"></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="450px" width="600px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="450px" width="600px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="450px" width="600px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="450px" width="600px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="450px" width="600px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="450px" width="600px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="450px" width="600px"/></div>
             <div style="position: absolute; height: 50px; bottom: 0; width: 530px;background-color: #E3E3E3;z-index:10;"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow4" class="slideshow inlineBlock vertAlignTop" style="margin-left:60px;">
-
-            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
             <!-- Interested in Rushing?-->
             <div class="opensans centerDiv vertAlignTop centerText posAbs" style="left: 550px; font-size: 20px; height: 400px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
@@ -115,26 +113,26 @@
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow5" class="slideshow inlineBlock vertAlignTop" style="">
-            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
 
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow6" class="slideshow inlineBlock vertAlignTop" style="">
-            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
 
 
