--- a/rush.html
+++ b/rush.html
@@ -46,12 +46,12 @@
         <img src="images/symbols/spdrush2016n.png" height="100%" width="100%"/>
     </div>
 
-    <div style="margin-bottom: 55px;">
-    <p>As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
-    <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
-    both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
-    learning more, or joining our Organization can come out and do so in a manner that gives proper insight on what we do
-    , and what we stand for.</p>
+    <div style="margin-bottom: 95px;line-height: 26px;">
+        As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
+            <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
+            both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
+            learning more, or joining our Organization can come out and do so in a manner that gives proper insight on what we do
+            , and what we stand for.
     </div>
 
     <!-- Academic Benefits -->
