Mobile friendly. Tons of misc code. Needs cleanup

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer Space -->
 <div class="" style="height: 80px;"></div>
 <!-- Footer -->
-<div class="posAbs" style="bottom: 0; height: 80px; background-color: #191919; width: 100%;">
+<div class="posAbs" style="bottom: 0; height: 80px; background-color: #191919; width: 100%;;">
     <div class="shadowTop" style="">
         <div style="width: 960px; margin: 0 auto;">
             <div class="posRel centerDiv" style="width: 90%; height: 80px;">
