--- a/mobile.html
+++ b/mobile.html
@@ -21,32 +21,25 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
-    <script type="text/javascript">
-        <!--
-        if (screen.width <= 699) {
-            document.location = "mobile.html";
-        }
-        //-->
-    </script>
-    <script language=javascript>
-        <!--
-        if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-            location.replace("http://beta-eta.sigmaphidelta.org/mobile.html");
-        }
-        -->
-    </script>
-
 </head>
 
-<body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow: hidden; background-color: #E3E3E3; margin:0; padding:0; ">
+<body id="pageone" class="posRel centerText" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0; ">
 <!-- Header -->
 <div id="header"></div>
 
-<!-- Content -->
-<div class="posRel" style="width: 100%; margin:15px auto 25px auto; text-align: center; min-height: 453px;overflow:hidden;">
-    <div style="position: absolute; height: 440px; width: 590px; border: 10px solid #363636;z-index: 10; left: 650px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 25px;"></div>
+<!-- Welcome Letter-->
+<div class="inlineBlock opensans centerDiv vertAlignTop centerText posRel bordRad5 shadow" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; height: 300px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
+    <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+    <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+        Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
+            success</strong> while enriching the college experience for engineering students.</p>
+</div>
 
-    <div class=" posRel" style="width: 4000px; text-align: left; left: -1460px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
+<!-- Content -->
+<div class="posRel" style="bottom: 0;width: 700px; margin:15px auto 25px auto; text-align: center; min-height: 453px;overflow:hidden;">
+    <div style="position: absolute; height: 440px; width: 590px; border: 10px solid #363636;z-index: 10; left: 45px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 22px;"></div>
+
+    <div class=" posRel" style="width: 4000px; text-align: left; left: -2070px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);height: 398px;margin: 90px auto 50px;">
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
@@ -81,13 +74,7 @@
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
-            <!-- Welcome Letter-->
-            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs" style="left: 540px; font-size: 20px; height: 400px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
-                <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-                <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
-                    Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
-                        success</strong> while enriching the college experience for engineering students.</p>
-            </div>
+
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
@@ -113,16 +100,7 @@
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
-            <!-- Interested in Rushing?-->
-            <div class="opensans centerDiv vertAlignTop centerText posAbs" style="left: 550px; font-size: 20px; height: 400px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
-                <div class="" style="color: white; font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
-                <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
-                    Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
 
-                <a href="rush.html" style="text-decoration: none;">
-                    <div id="rushBtn" class="vertAlignTop centerText" style="">SPRING RUSH 2016</div>
-                </a>
-            </div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
@@ -155,12 +133,23 @@
 
     </div>
 
+
+</div>
+
+<!-- Interested in Rushing?-->
+<div class="inlineBlock opensans centerDiv vertAlignTop centerText posRel bordRad5 shadow" style="background-color: #464646; top: 50px; font-size: 20px;margin-bottom: 50px; height: 300px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
+    <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
+    <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+        Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
+    <a href="rush.html" style="text-decoration: none;">
+        <div id="rushBtn" class="vertAlignTop centerText" style="">SPRING RUSH 2016</div>
+    </a>
 </div>
 
 <!-- Footer Space -->
-<div class="" style="height: 80px;"></div>
+<div class="" style="height: 200px;"></div>
 <!-- Footer -->
-<div class="posFix" style="bottom: 0; height: 80px; background-color: #191919; width: 100%;">
+<div class="posFix" style="bottom: 0; height: 80px; background-color: #191919; width: 100%;z-index: 100;">
     <div class="shadowTop" style="">
         <div style="width: 960px; margin: 0 auto;">
             <div class="posRel centerDiv" style="width: 90%; height: 80px;">
