Working out solutions for different resolutions

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         if (screen.width <= 699) {
             document.location = "mobile.html";
         }
+        else if (screen.width <= 1900) {
+            document.location = "indexa.html";
+        }
         //-->
     </script>
     <script language=javascript>
@@ -38,7 +41,7 @@
 
 </head>
 
-<body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow: hidden; background-color: #E3E3E3; margin:0; padding:0; ">
+<body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0; ">
 <!-- Header -->
 <div id="header"></div>
 
