--- a/rush.html
+++ b/rush.html
@@ -26,6 +26,15 @@
             color: #DB2B2A;
             font-weight:normal;
         }
+        @media only screen and (max-width: 699px) {
+            #rushflier {
+                float: none;
+                display: block;
+                width: 80%;
+                height: 90%;
+                border: 1px solid red;
+            }
+        }
     </style>
 
 </head>
@@ -41,12 +50,12 @@
     <div class="inlineBlock" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 15px 0;">Why rush Sigma Phi Delta?</div>
 
     <!-- List of Rush Events -->
-    <div class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
+    <div id="rushflier" class="shadow inlineBlock floatRight vertAlignTop" style="margin-top:30px; width: 500px; height: 300px; margin-left: 25px; text-align: left; padding: 0; border: 5px solid #191919;">
         <!-- Rush Flier -->
         <img src="images/symbols/spdrush2016n.png" height="100%" width="100%"/>
     </div>
 
-    <div style="margin-bottom: 95px;line-height: 26px;">
+    <div style="margin-bottom: 95px;line-height: 26px;font-size: 1em;">
         As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
