Working on index page

--- a/index.html
+++ b/index.html
@@ -51,16 +51,18 @@
 
     <div class=" posRel" style="width: 4000px; text-align: left; left: -1460px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);height: 398px;margin: 90px auto 50px;">
+
+
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
-            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
-            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
+        <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="height: 400px; width: 530px;">
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="100%" width="100%"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="100%" width="100%"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="100%" width="100%"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="100%" width="100%"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="100%" width="100%"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="100%" width="100%"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="100%" width="100%"/></div>
+            <div class="posAbs" style="height: 100%; width: 100%; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 100%;"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
