--- a/rush.html
+++ b/rush.html
@@ -143,7 +143,7 @@
             <div class="colWhite bordRad50 height100 width100" style=" background-color: #F7302F;display:flex;justify-content:center;align-items:center;">
                 <div>
                     <img src="images/symbols/spdgearlogo.png" height="175px" width="150px" class="block centerDiv"/>
-                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Social Benefits</div>
+                    <div class="" style="font-family: Amaranth; font-size: 26px;height: 50px;padding-top: 5px;">Brotherhood</div>
                 </div>
             </div>
         </div>
